[gd_scene load_steps=4 format=3 uid="uid://crfl4qv4cvgwq"]

[ext_resource type="Script" uid="uid://uktqrdqbw21b" path="res://UI/menu_main.gd" id="1_dk4ej"]
[ext_resource type="PackedScene" uid="uid://bop5wmjudg5xh" path="res://Level/map.tscn" id="2_bp7uk"]
[ext_resource type="PackedScene" uid="uid://ctaeg60vimnlh" path="res://UI/HUD.tscn" id="3_0ouc6"]

[node name="MenuMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dk4ej")
levels = Array[PackedScene]([ExtResource("2_bp7uk")])

[node name="MenuCanvas" type="CanvasLayer" parent="."]

[node name="MainVBox" type="VBoxContainer" parent="MenuCanvas"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -81.5
offset_right = 46.5
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2

[node name="MainTitleMargin" type="MarginContainer" parent="MenuCanvas/MainVBox"]
layout_mode = 2

[node name="MainTitle" type="Label" parent="MenuCanvas/MainVBox/MainTitleMargin"]
layout_mode = 2
text = "GAME TITLE"

[node name="Resume" type="Button" parent="MenuCanvas/MainVBox"]
layout_mode = 2
text = "Resume"

[node name="NewGame" type="Button" parent="MenuCanvas/MainVBox"]
layout_mode = 2
text = "New Game"

[node name="Options" type="Button" parent="MenuCanvas/MainVBox"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="MenuCanvas/MainVBox"]
layout_mode = 2
text = "Quit"

[node name="HUD" parent="." instance=ExtResource("3_0ouc6")]
visible = false

[connection signal="pressed" from="MenuCanvas/MainVBox/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MenuCanvas/MainVBox/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MenuCanvas/MainVBox/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MenuCanvas/MainVBox/Quit" to="." method="_on_quit_pressed"]
[connection signal="PauseMenu" from="HUD" to="." method="_on_hud_pause_menu"]
